<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="@string/add_airline_and_flights" />

    <TextView
        android:id="@+id/airlineNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="41dp"
        android:gravity="center"
        android:text="@string/airline_name" />

    <EditText
        android:id="@+id/airlineName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/name_of_airline"
        android:autofillHints="@string/name_of_airline"

        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/flightNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="111dp"
        android:text="@string/flight_number" />

    <TextView
        android:id="@+id/flightSrcLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="182dp"
        android:text="@string/airport_source_code" />

    <EditText
        android:id="@+id/flightSrc"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="202dp"
        android:ems="10"
        android:hint="@string/flight_source_code"
        android:autofillHints="@string/flight_source_code"

        android:inputType="textPersonName" />

    <Button
        android:id="@+id/Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="29dp"
        android:text="@string/add" />

    <TextView
        android:id="@+id/flightDepartureDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="253dp"
        android:text="@string/flight_departure_date" />

    <EditText
        android:id="@+id/flightDepartureDate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="273dp"
        android:layout_marginEnd="201dp"
        android:ems="10"
        android:hint="@string/dateFormat"
        android:autofillHints="@string/dateFormat"
        android:inputType="date" />

    <TextView
        android:id="@+id/flightDepartureTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="324dp"
        android:text="@string/flight_departure_time" />

    <EditText
        android:id="@+id/flightDepartureTime"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="349dp"
        android:ems="10"
        android:hint="@string/timeFormat"
        android:autofillHints="@string/timeFormat"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/FlightDestinationCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="395dp"
        android:text="@string/airport_destination_code" />

    <EditText
        android:id="@+id/flightDestinationCode"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="418dp"
        android:ems="10"
        android:hint="@string/flight_destination_code"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/flightArrivalDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="467dp"
        android:text="@string/flight_arrival_date" />

    <EditText
        android:id="@+id/flightArrivalDate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="489dp"
        android:ems="10"
        android:hint="@string/dateFormat"
        android:autofillHints="@string/dateFormat"
        android:inputType="date" />

    <TextView
        android:id="@+id/flightArrivalTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="536dp"
        android:text="@string/flight_arrival_time" />

    <EditText
        android:id="@+id/flightArrivalTime"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="557dp"
        android:ems="10"
        android:hint="@string/timeFormat"
        android:autofillHints="@string/timeFormat"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/flightNumber"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="133dp"
        android:ems="10"
        android:hint="@string/flight_num"
        android:autofillHints="@string/flight_num"
        android:inputType="textPersonName" />

</RelativeLayout>